--- a/public/back/login.html
+++ b/public/back/login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/common.css">
 </head>
 
-<body>
+<body class="body_bg">
     <div class="login">
 
         <div class="container">
