--- a/public/back/product.html
+++ b/public/back/product.html
@@ -36,10 +36,10 @@
                     </a>
                     <div class="child">
                         <a href="first.html">一级分类</a>
-                        <a href="javascript:;" class="current">二级分类</a>
+                        <a href="second.html">二级分类</a>
                     </div>
                 </li>
-                <li><a href="product.html">
+                <li><a href="javascript:;" class="current">
                         <i class="glyphicon glyphicon-tags"></i>
                         <span>商品展示</span>
                     </a></li>
@@ -59,22 +59,24 @@
         <div class="container-fluid">
             <ol class="breadcrumb mt_20">
                 <li><a href="index.html">管理系统</a></li>
-                <li class="active">分类管理</li>
-                <li class="active">二级分类</li>
+                <li class="active">商品管理</li>
             </ol>
 
             <!--  二级分类渲染 -->
             <div class="contant">
-                <button class="btn btn-default" id="addBtn">添加分类</button>
+                <button class="btn btn-default" id="addBtn">添加商品</button>
 
                 <!-- 分类渲染 -->
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
                             <th>序号</th>
-                            <th>一级分类名称</th>
-                            <th>二级分类名称</th>
-                            <th>二级分类LOGO</th>
+                            <th>商品名称</th>
+                            <th>商品描述</th>
+                            <th>商品库存</th>
+                            <th>商品尺寸</th>
+                            <th>商品状态</th>
+                            <th>操作</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -94,7 +96,7 @@
 
     <!-- 添加模态框 -->
     <div class="modal fade" tabindex="-1" id="addModal">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <form id="form">
                     <div class="modal-header">
@@ -115,22 +117,49 @@
                                     <!-- 挖个坑 -->
                                 </ul>
                             </div>
-                            <!-- 隐藏域 -->
-                            <input type="hidden" name="categoryId">
+                            <input type="hidden" name="brandId">
                         </div>
 
                         <div class="form-group">
-                            <input type="text" name="brandName" class="form-control" placeholder="请输入二级分类">
+                            <input type="text" name="proName" class="form-control" placeholder="请输入商品名称">
+                        </div>
+
+                        <div class="form-group">
+                            <textarea class="form-control" name="proDesc" cols="30" rows="4" placeholder="请输入商品描述"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" name="num" class="form-control" placeholder="请输入商品库存">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" name="size" class="form-control" placeholder="请输入商品尺码">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" name="oldPrice" class="form-control" placeholder="请输入商品原价">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" name="price" class="form-control" placeholder="请输入商品现价">
                         </div>
 
                         <div class="form-group">
                             <label class="btn btn-default" for="fileupload">选择图片</label>
-                            <input type="file" id="fileupload" name="pic1" style="display: none;" data-url="/category/addSecondCategoryPic">
+                            <!-- 配置必要的属性, input, type类型 file
+                               1. name 后台用于接收图片文件的
+                               2. data-url 配置插件将来上传文件时, 请求的后台接口地址
+                               3. post 只要是文件上传, 必然是 post 请求, 默认就是 post
+                               4. multiple 配置让 input 可以选择多个文件
+                            -->
+                            <input multiple data-url="/product/addProductPic" name="pic1" type="file" id="fileupload"
+                                style="display: none;">
                         </div>
 
-                        <div class="form-group">
-                            <img style="height: 100px;" src="./images/none.png" alt="" id="addImg">
-                            <input type="hidden" name="brandLogo">
+                        <div class="form-group" id="imgBox">
+                            <!-- <img style="height: 100px;" src="./images/none.png" alt=""> -->
+                            <!-- 准备了一个隐藏域, 专门用于标记 图片是否上传满3张 -->
+                            <input type="hidden" name="picStatus">
                         </div>
 
 
@@ -171,14 +200,20 @@
     </div>
 
     <!-- 渲染模板 -->
-    <script type="text/html" id="secondTpl">
+    <script type="text/html" id="proTpl">
         {{ each rows v i }}
           <tr>
             <td>{{ i + 1 + (page-1) * size }}</td>
-            <td>{{ v.categoryName }}</td>
-            <td>{{ v.brandName }}</td>
-            <td>
-              <img style="height: 50px;" src="{{ v.brandLogo }}" alt="">
+            <td>{{ v.proName }}</td>
+            <td>{{ v.proDesc }}</td>
+            <td>{{ v.num }}</td>
+            <td>{{ v.size }}</td>
+            <td>{{ v.statu == 1 ? "已上架" : "已下架"}}</td>
+            <td>{{ if v.statu == 1 }}
+                <button class="btn btn-danger">下架</button>
+                {{ else }}
+                <button class="btn btn-success">上架</button>
+                {{ /if }}
             </td>
           </tr>
         {{ /each }}
@@ -193,10 +228,12 @@
 
 
 
+
+
+
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
     <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
-
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
@@ -204,7 +241,7 @@
     <script src="./lib/artTemplate/template-web.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/isLogin.js"></script>
-    <script src="./js/second.js"></script>
+    <script src="./js/product.js"></script>
 
 </body>
 
