--- a/public/back/user.html
+++ b/public/back/user.html
@@ -39,7 +39,7 @@
                         <a href="second.html">二级分类</a>
                     </div>
                 </li>
-                <li><a href="#">
+                <li><a href="product.html">
                         <i class="glyphicon glyphicon-tags"></i>
                         <span>商品展示</span>
                     </a></li>
